# praktikum

./: README.md  pyproject.toml
notebooks/: Task 1 (professional skills).ipynb  Task 2 (professional skills).ipynb  Task 3 (professional skills).ipynb  Task 4 (professional skills).ipynb  Task 5 (professional skills).ipynb
project/: test_project_3.ipynb
