[tool.poetry]
name = "praktikum"
version = "0.1.0"
description = ""
authors = ["ivhernandez <ivan.hernandez@mercadolibre.com.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
notebook = "^6.5.2"
matplotlib = "^3.6.2"
scipy = "^1.9.3"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

